# lepto

./: LICENSE  README.md  pyproject.toml  requirements.txt
lepto/behaviour/model/: linear_demand.py  optimize.py  transformers.py
lepto/data/: data_generation.ipynb  sample_behaviour.csv  sample_standard.csv
lepto/gui/: LEPTO_GUI.py
lepto/gui/framework/: data_preprocessor.py  glm_framework.py  utils.py
lepto/gui/pages/: 1_Data_Preparation.py  2_Model_Setup.py  3_Model_Review.py
lepto/gui/utils/: maps.py  save_ui.py  utils.py
lepto/standard/model/: linear_model.py  loss.py  optimize.py  penalty.py  transformers.py
lepto/tests/tests_behaviour/: test_behaviour_model.py
lepto/tests/tests_framework/: test_framework.py
lepto/tests/tests_standard/: test_linear_model.py  test_penalty_matrices.py
notebooks/: example_framework_behaviour.ipynb  example_framework_standard.ipynb  example_glm_behaviour.ipynb  example_glm_standard.ipynb
